Use the new version of verified GC sweep code
    * This version was the latest version sent by Sheera on the Slack
    * Refactor the way heap start and heap end are handled into a bit
      more cleaner fashion

--- a/runtime/verified_gc/allocator/Makefile
+++ b/runtime/verified_gc/allocator/Makefile
@@ -2,8 +2,7 @@ CC?=gcc -g
 CXX?=g++ -g
 LINKDIR?=target/release
 DISTDIR?=dist
-# CARGO_FLAGS?=--features "no_expand_heap" --features "check_invariants"
-CARGO_FLAGS?=--features "no_expand_heap"
+CARGO_FLAGS?=--features "check_invariants"
 
 rust-release:
 	cargo build --release $(CARGO_FLAGS)
